@@ -14,7 +14,7 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>my_source_reference</string> </value>
+            <value> <string>my_filename</string> </value>
         </item>
         <item>
             <key> <string>message_values</string> </key>
